src/Domain/Compiler/Tests/Expression/BinaryExpression/BoundsChecking/__Baselines__/Multiplication_Underflow-StashIr.error
error: Integral expression of type 's32 -4294967296' subceeds minimum value of type 's32'.
--> main.hs:9:16
  | 
9 |         return x * y;
  |                ^^^^^
